<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_backgroud"
    android:padding="8dp"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/edittext_limit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edittext_limit"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/btn_limited"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_limited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_use_limit"
        app:layout_constraintBottom_toBottomOf="@id/btn_limited"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edittext_limit"
        app:layout_constraintTop_toTopOf="@id/btn_limited" />

    <TextView
        android:id="@+id/textview_limite_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sorteio_de_1_a_100"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_limited" />

    <TextView
        android:id="@+id/textview_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/default_output_mesage"
        android:textColor="@color/output_message"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_limite_message" />

    <Button
        android:id="@+id/btn_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_drawlots"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_message_last_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/n_meros_sorteados"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_output" />

    <TextView
        android:id="@+id/textview_list_last_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/output_message"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/textview_message_last_number"
        app:layout_constraintTop_toBottomOf="@id/textview_message_last_number" />

</androidx.constraintlayout.widget.ConstraintLayout>